[tool.poetry]
name = "blog"
version = "1.0.0"
description = "Khaled Monsoor's personal blog."
license = 'CC-BY-NC-SA-4.0'
authors = ["Khaled Monsoor <oss@kmonsoor.com>"]
readme = "readme.md"
homepage = 'https://kmonsoor.com'
repository = 'https://github.com/kmonsoor/blog.kmonsoor.com'

[tool.poetry.urls]
"Funding" = "https://github.com//kmonsoor/blog.kmonsoor.com"

[tool.poetry.dependencies]
python = "3.9.*"

pelican = {extras = ["Markdown"], version = "^4.6.0"}
pelican-image-process = "^2.1.3"
pelican-seo = {git = "https://github.com/pelican-plugins/seo.git", branch = "master"}
pelican-similar-posts = "^1.0.0"
pelican-sitemap = "^1.0.2"
pelican-neighbors = "^1.2.0"
pelican-tipue-search = {git = "https://github.com/pelican-plugins/tipue-search.git", branch = "main"}

plumage = {git = "https://github.com/kdeldycke/plumage.git", branch = "develop"}

beautifulsoup4 = "^4.9.3"
gensim = "^4.0.1"
mdx_video = "^0.1.8"
pygments = "^2.9.0"
pymdown-extensions = "^8.2"
typogrify = "^2.0.7"
# End of [tool.poetry.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
