[tool.poetry]
name = "blog"
version = "1.0.0"
description = "Khaled Monsoor's personal blog."
license = 'CC-BY-NC-SA-4.0'
authors = ["Khaled Monsoor <oss@kmonsoor.com>"]
readme = "readme.md"
homepage = 'https://kmonsoor.com'
repository = 'https://github.com/kmonsoor/blog.kmonsoor.com'

[tool.poetry.urls]
"Funding" = "https://github.com//kmonsoor/blog.kmonsoor.com"

[tool.poetry.dependencies]
python = "3.9.*"

pelican = {extras = ["Markdown"], version = "^4.6.0"}
pelican-image-process = "^2.1.3"
pelican-seo = {git = "https://github.com/pelican-plugins/seo.git", branch = "master"}
pelican-sitemap = {git = "https://github.com/pelican-plugins/sitemap.git", branch = "master"}
pelican-neighbors = {git = "https://github.com/pelican-plugins/neighbors.git", branch = "main"}
pelican-tipue-search = {git = "https://github.com/pelican-plugins/tipue-search.git", branch = "main"}
pelican-similar-posts = {git = "https://github.com/pelican-plugins/similar-posts.git", branch = "main"}

plumage = {git = "https://github.com/kmonsoor/plumage.git", branch = "develop"}

beautifulsoup4 = "^4.9.3"
gensim = "^4.0.1"
mdx_video = "^0.1.8"
pygments = "^2.9.0"
pymdown-extensions = "^8.2"
typogrify = "^2.0.7"
# End of [tool.poetry.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
